--- a/Anil Foods/Packages/manifest.json
+++ b/Anil Foods/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.inputsystem": "1.14.2",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.7",
+    "com.unity.toolchain.linux-x86_64": "2.0.11",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.11",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.4",
