Updated Chunk Spawns

--- a/Anil Foods/.vscode/settings.json
+++ b/Anil Foods/.vscode/settings.json
@@ -56,5 +56,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Anil Foods.sln"
+    "dotnet.defaultSolution": "Anil Foods.sln",
+    "dotnet.preferCSharpExtension": true
 }
