--- a/Anil Foods/Packages/manifest.json
+++ b/Anil Foods/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.11",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.4",
+    "com.zappar.uar": "https://github.com/zappar-xr/universal-ar-unity.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
